// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": true,
    },
    "amount1": {
      "mag": 10030n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 79,
      "range_check_builtin": 1879,
    },
    "n_steps": 25826,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941876495514824478789461470n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10030n,
      "sign": false,
    },
    "amount1": {
      "mag": 10000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 85,
      "range_check_builtin": 1916,
    },
    "n_steps": 27895,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935050431234390418979673808n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 91,
      "range_check_builtin": 1739,
    },
    "n_steps": 26283,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": true,
    },
    "amount1": {
      "mag": 89147998658379729489n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 109,
      "range_check_builtin": 1401,
    },
    "n_steps": 24734,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 30675774356659039445765540334520463683873n,
  "tick_after": {
    "mag": 9002910n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 498500000000000000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 91,
      "range_check_builtin": 2691,
    },
    "n_steps": 32795,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 18411346761312300631549769633270080325n,
      "sign": false,
    },
    "amount1": {
      "mag": 996999999999999988n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 327,
      "pedersen_builtin": 463,
      "range_check_builtin": 12025,
    },
    "n_steps": 132180,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10488,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10476,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": false,
    },
    "amount1": {
      "mag": 9969n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 85,
      "range_check_builtin": 1854,
    },
    "n_steps": 27530,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 9969n,
      "sign": true,
    },
    "amount1": {
      "mag": 10000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 79,
      "range_check_builtin": 1830,
    },
    "n_steps": 25559,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 91,
      "range_check_builtin": 2119,
    },
    "n_steps": 29081,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 109,
      "range_check_builtin": 2341,
    },
    "n_steps": 32211,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 91,
      "range_check_builtin": 2005,
    },
    "n_steps": 28152,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 109,
      "range_check_builtin": 2429,
    },
    "n_steps": 31965,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": true,
    },
    "amount1": {
      "mag": 10030n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 79,
      "range_check_builtin": 1891,
    },
    "n_steps": 25950,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941876495514824478789461470n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1649,
      "pedersen_builtin": 426,
      "range_check_builtin": 27101,
    },
    "n_steps": 224484,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 91,
      "range_check_builtin": 1751,
    },
    "n_steps": 26407,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": true,
    },
    "amount1": {
      "mag": 89147998658379729489n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 109,
      "range_check_builtin": 1413,
    },
    "n_steps": 24858,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 30675774356659039445765540334520463683873n,
  "tick_after": {
    "mag": 9002910n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 84,
      "range_check_builtin": 2503,
    },
    "n_steps": 29245,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 299,
      "pedersen_builtin": 426,
      "range_check_builtin": 8411,
    },
    "n_steps": 99958,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10488,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10476,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1649,
      "pedersen_builtin": 426,
      "range_check_builtin": 27041,
    },
    "n_steps": 224012,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 9969n,
      "sign": true,
    },
    "amount1": {
      "mag": 10000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 79,
      "range_check_builtin": 1842,
    },
    "n_steps": 25683,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 84,
      "range_check_builtin": 2502,
    },
    "n_steps": 29245,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 299,
      "pedersen_builtin": 426,
      "range_check_builtin": 8401,
    },
    "n_steps": 99886,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 91,
      "range_check_builtin": 2017,
    },
    "n_steps": 28276,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 499248873309964947n,
      "sign": true,
    },
    "amount1": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 109,
      "range_check_builtin": 2441,
    },
    "n_steps": 32089,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": {
    "mag": 1383292n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1621,
      "pedersen_builtin": 402,
      "range_check_builtin": 27645,
    },
    "n_steps": 220146,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10030n,
      "sign": false,
    },
    "amount1": {
      "mag": 10000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 103,
      "range_check_builtin": 1979,
    },
    "n_steps": 29193,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935050431234390418979673808n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 60,
      "range_check_builtin": 1460,
    },
    "n_steps": 20282,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 271,
      "pedersen_builtin": 402,
      "range_check_builtin": 7975,
    },
    "n_steps": 89803,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 498500000000000000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 115,
      "range_check_builtin": 2913,
    },
    "n_steps": 36193,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 18411346761312300631549769633270080324n,
      "sign": false,
    },
    "amount1": {
      "mag": 996999999999999987n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 329,
      "pedersen_builtin": 481,
      "range_check_builtin": 11490,
    },
    "n_steps": 129744,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10488,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10476,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": false,
    },
    "amount1": {
      "mag": 9969n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 83,
      "pedersen_builtin": 103,
      "range_check_builtin": 1917,
    },
    "n_steps": 28828,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": {
    "mag": 1n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1621,
      "pedersen_builtin": 402,
      "range_check_builtin": 27586,
    },
    "n_steps": 219674,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 115,
      "range_check_builtin": 2340,
    },
    "n_steps": 32471,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 1000000000000000000n,
      "sign": false,
    },
    "amount1": {
      "mag": 499248873309964947n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 133,
      "range_check_builtin": 2532,
    },
    "n_steps": 35454,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": {
    "mag": 1383293n,
    "sign": true,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 28,
      "pedersen_builtin": 60,
      "range_check_builtin": 1460,
    },
    "n_steps": 20282,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 271,
      "pedersen_builtin": 402,
      "range_check_builtin": 7966,
    },
    "n_steps": 89731,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 402,
      "range_check_builtin": 27633,
    },
    "n_steps": 220022,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 27038,
    },
    "n_steps": 223179,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 60,
      "range_check_builtin": 1448,
    },
    "n_steps": 20158,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 270,
      "pedersen_builtin": 402,
      "range_check_builtin": 7963,
    },
    "n_steps": 89679,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 60,
      "range_check_builtin": 2281,
    },
    "n_steps": 25840,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 297,
      "pedersen_builtin": 408,
      "range_check_builtin": 8772,
    },
    "n_steps": 100749,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10488,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10476,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 26978,
    },
    "n_steps": 222707,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 402,
      "range_check_builtin": 27574,
    },
    "n_steps": 219550,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 54,
      "pedersen_builtin": 60,
      "range_check_builtin": 2281,
    },
    "n_steps": 25848,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 297,
      "pedersen_builtin": 408,
      "range_check_builtin": 8762,
    },
    "n_steps": 100677,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 60,
      "range_check_builtin": 1448,
    },
    "n_steps": 20158,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 270,
      "pedersen_builtin": 402,
      "range_check_builtin": 7954,
    },
    "n_steps": 89607,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": true,
    },
    "amount1": {
      "mag": 10516n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 103,
      "range_check_builtin": 2715,
    },
    "n_steps": 33521,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 358626480022582750641202830198326118313n,
  "tick_after": {
    "mag": 105011n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10648n,
      "sign": false,
    },
    "amount1": {
      "mag": 10000n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 114,
      "pedersen_builtin": 127,
      "range_check_builtin": 2988,
    },
    "n_steps": 38113,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 318092040655615236860302625335891824051n,
  "tick_after": {
    "mag": 134871n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "execution_resources": undefined,
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "execution_resources": undefined,
  "revert_reason": "INSUFFICIENT_RESERVES",
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13061n,
      "sign": false,
    },
    "amount1": {
      "mag": 12055n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 142,
      "pedersen_builtin": 163,
      "range_check_builtin": 3887,
    },
    "n_steps": 46417,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13061n,
      "sign": false,
    },
    "amount1": {
      "mag": 12055n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 358,
      "pedersen_builtin": 505,
      "range_check_builtin": 9795,
    },
    "n_steps": 117130,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": false,
    },
    "amount1": {
      "mag": 0n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10488,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 0n,
      "sign": true,
    },
    "amount1": {
      "mag": 0n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "pedersen_builtin": 42,
      "range_check_builtin": 302,
    },
    "n_steps": 10476,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": {
    "mag": 0n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 10000n,
      "sign": false,
    },
    "amount1": {
      "mag": 9455n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 87,
      "pedersen_builtin": 127,
      "range_check_builtin": 2608,
    },
    "n_steps": 35703,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 320050589511959210319743359082898750689n,
  "tick_after": {
    "mag": 122594n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 9555n,
      "sign": true,
    },
    "amount1": {
      "mag": 10000n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 56,
      "pedersen_builtin": 103,
      "range_check_builtin": 2565,
    },
    "n_steps": 32818,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 357432340868788008115702140939101243710n,
  "tick_after": {
    "mag": 98340n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13061n,
      "sign": false,
    },
    "amount1": {
      "mag": 12092n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 142,
      "pedersen_builtin": 163,
      "range_check_builtin": 3924,
    },
    "n_steps": 46902,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": {
    "mag": 1386296n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 13061n,
      "sign": false,
    },
    "amount1": {
      "mag": 12092n,
      "sign": true,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 358,
      "pedersen_builtin": 505,
      "range_check_builtin": 9823,
    },
    "n_steps": 117543,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": {
    "mag": 88722884n,
    "sign": true,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 15232n,
      "sign": true,
    },
    "amount1": {
      "mag": 16513n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 84,
      "pedersen_builtin": 139,
      "range_check_builtin": 2886,
    },
    "n_steps": 37440,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": {
    "mag": 1386295n,
    "sign": false,
  },
}
`;

exports[`core tests overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": {
      "mag": 15232n,
      "sign": true,
    },
    "amount1": {
      "mag": 16513n,
      "sign": false,
    },
  },
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 327,
      "pedersen_builtin": 481,
      "range_check_builtin": 9392,
    },
    "n_steps": 106894,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": {
    "mag": 88722883n,
    "sign": false,
  },
}
`;
